--- a/views/admin/login.hbs
+++ b/views/admin/login.hbs
@@ -11,20 +11,22 @@
         <h2>Iniciar sesión</h2>
         <form action="/admin/login" method="post">
             <!-- Campo de usuario -->
-            <div class="form-group">
-                <label for="username">Usuario</label>
-                <input type="text" id="username" name="username" required>
+             <div class="mb-3">
+                <label for="usuario" class="form-label">Usuario</label>
+                <input type="text" class="form-control" id="exampleFormControlInput1">  
             </div>
-            <!-- Campo de contraseña -->
-            <div class="form-group">
-                <label for="password">Contraseña</label>
-                <input type="password" id="password" name="password" required>
+            <div class="mb-3">
+                <label for="password" class="form-label">Contraseña</label>
+                <input type="password" class="form-control" id="exampleFormControlInput1">  
             </div>
             <!-- Botón -->
             <div class="form-group">
-                <button type="submit">Iniciar sesión</button>
+                <button type="button" class="btn btn-primary">Iniciar sesión</button>
             </div>
         </form>
+        {{#if error}}
+        <p>Usuario o contraseña incorrecto</p>
+        {{/if}}
     </div>
 
 </body>
