--- a/views/admin/layout.hbs
+++ b/views/admin/layout.hbs
@@ -17,7 +17,7 @@
      <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">
-                <img src="../../public/img/carpa.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+                <img src="/img/carpa.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
                 Caleuche Glamping </a>
         </div>
     </nav>
