--- a/views/admin/login.hbs
+++ b/views/admin/login.hbs
@@ -1,27 +1,18 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Iniciar sesión</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
     <div class="login-container">
         <h2>Iniciar sesión</h2>
         <form action="/admin/login" method="post">
             <!-- Campo de usuario -->
              <div class="mb-3">
                 <label for="usuario" class="form-label">Usuario</label>
-                <input type="text" class="form-control" id="exampleFormControlInput1">  
+                <input type="text" class="form-control" id="user" name="usuario">  
             </div>
             <div class="mb-3">
                 <label for="password" class="form-label">Contraseña</label>
-                <input type="password" class="form-control" id="exampleFormControlInput1">  
+                <input type="password" class="form-control" id="password" name="password">  
             </div>
             <!-- Botón -->
             <div class="form-group">
-                <button type="button" class="btn btn-primary">Iniciar sesión</button>
+                <button type="submit" class="btn btn-primary">Iniciar sesión</button>
             </div>
         </form>
         {{#if error}}
