--- a/views/admin/promociones.hbs
+++ b/views/admin/promociones.hbs
@@ -15,7 +15,7 @@
       <h2>Promociones</h2>
     </div>
     <div class="col-5 text-rigth">
-      <a href="" class="btn btn-success"> <i class="fas fa-plus"></i>Nuevo</a>
+      <a href="/admin/promociones/agregar" class="btn btn-success"> <i class="fas fa-plus"></i>Nuevo</a>
     </div>
   </div>
   {{! fin fila 2 }}
@@ -37,8 +37,8 @@
             <td>{{titulo}}</td>
             <td class="text-right">
                 {{!-- editar --}}
-              <a href="" class="btn btn-secondary"><i
-                  class="fas fa-pencil-all"
+              <a href="/admin/promociones/modificar/{{id}}" class="btn btn-secondary"><i
+                  class="fas fa-pencil-alt"
                 ></i></a>
                 {{!-- eliminar --}}
               <a href="/admin/promociones/eliminar/{{id}}" class="btn btn-secondary">
