--- a/views/admin/promociones.hbs
+++ b/views/admin/promociones.hbs
@@ -35,6 +35,7 @@
           <tr>
             <th scope="row">{{id}}</th>
             <td>{{titulo}}</td>
+            <td>{{{imagen}}}</td>
             <td class="text-right">
                 {{!-- editar --}}
               <a href="/admin/promociones/modificar/{{id}}" class="btn btn-secondary"><i
