--- a/views/admin/agregar.hbs
+++ b/views/admin/agregar.hbs
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-6 offset-3">
       <h2>Agregar una nueva promoción</h2>
-      <form action="/admin/promociones/agregar" method="post">
+      <form action="/admin/promociones/agregar" method="post" enctype="multipart/form-data">
         <div class="form-group">
           <input
             type="text"
@@ -25,6 +25,9 @@
             placeholder="Precio"
             name="precio"
           />
+        </div>
+        <div class="form-group">
+          <label for="">Imagen: <input class="form-control" type="file" name="imagen" id="imagen"></label>
         </div>
         <button type="submit" class="btn btn-primary"> Guardar</button>
       </form>
