--- a/views/admin/modificar.hbs
+++ b/views/admin/modificar.hbs
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-6 offset-3">
       <h2>Modificar la promocion {{promocion.id}}</h2>
-      <form action="/admin/promociones/modificar" method="post">
+      <form action="/admin/promociones/modificar" method="post" enctype="multipart/form-data">
         <input type="hidden" value="{{promocion.id}}" name="id" />
         <div class="form-group">
           <label for="">Título</label>
@@ -25,6 +25,15 @@
             name="precio"
             value="{{promocion.precio}}"
           />
+        </div>
+        <div class="form-group">
+          <p>
+            <label>Imagen: <input type="file" name="imagen" id="imagen"></label>
+          </p>
+          <p>
+            <label><input type="checkbox" name="img_delete" id="img_delete" value="1">¿Desea eliminar la imagen actual?</label>
+            <input type="hidden" name="img_original" value="{{promocion.img_id}}">
+          </p>
         </div>
         <button type="submit" class="btn btn-primary"> Guardar</button>
       </form>
