--- a/views/promociones.hbs
+++ b/views/promociones.hbs
@@ -1,5 +1,5 @@
 <!-- img de fondo para promociones -->
-<div class="conteiner fondo-promociones">
+<div class="container fondo-promociones">
   <div class="info-fondo">
     <h2 class="titulo-fondo">Promociones </h2>
     <h3 class="subtitulo-fondo">Conoce todo lo que tenemos para ofrecerte</h3>
@@ -16,7 +16,7 @@
             href="javascript:void(0)"
             data-toggle="modal"
             data-target="#Modal{{id}}"
-          > <img src="img/desayuno.png" /> {{titulo}}</a>
+          > <img src="{{imagen}}" /> {{titulo}}</a>
         </li>
       {{/each}}
     </ul>
@@ -29,8 +29,8 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">{{titulo}}</h5>
-                <button type="button" class="close" aria-disabled="modal" aria-label="Close">
+                <h1 class="modal-title fs-5" id="exampleModalLabel">{{titulo}}</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
