--- a/views/admin/promociones.hbs
+++ b/views/admin/promociones.hbs
@@ -3,7 +3,7 @@
     <div class="col">
       <p class="text-end">
         <span> Hola {{usuario}} !</span>
-        <a href="admin/login/logout" class="btn btn-danger">
+        <a href="/admin/login/logout" class="btn btn-danger">
           Cerrar sesión
           <i class="fas fa-sign-out-alt"></i></a>
       </p>
@@ -27,7 +27,6 @@
           <tr>
             <th scope="col">#</th>
             <th scope="col">Título</th>
-            <th scope="col" class="text-right">Acciones</th>
           </tr>
         </thead>
         <tbody>
