--- a/views/admin/modificar.hbs
+++ b/views/admin/modificar.hbs
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container container-modificar">
   <div class="row">
     <div class="col-6 offset-3">
       <h2>Modificar la promocion {{promocion.id}}</h2>
