--- a/views/admin/agregar.hbs
+++ b/views/admin/agregar.hbs
@@ -1,7 +1,7 @@
-<div class="container">
+<div class="container container-agregar">
   <div class="row">
     <div class="col-6 offset-3">
-      <h2>Agregar una nueva promoción</h2>
+      <h3>Agregar una nueva promoción</h3>
       <form action="/admin/promociones/agregar" method="post" enctype="multipart/form-data">
         <div class="form-group">
           <input
