--- a/public/stylesheets/admin.css
+++ b/public/stylesheets/admin.css
@@ -132,3 +132,14 @@ th.text-right {
     text-align: center;
     margin-top: auto;
 }
+
+/* Estilo form agregar */
+.container-agregar{
+    background-color: var(--color-form);
+    padding: 20px 10px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    width: 100%;
+    max-width: 900px;
+    margin: 50px auto; 
+}
